# Dao

./: .ghci  .gitignore  :  Dao.cabal  Makefile  NOTES  README  README.md  S  TODO  commit.txt.bak  dao-edit-files.list  dao-ghc-build-opts.mk  dao-test-suite.config  dao.cabal  defns.mk  edit-files.list  freeze-issue.2012-07-08.dao  ghc-build-opts.mk  grep  pats.sed  project-files.list  set-debug.sh  test1.dao  test1.idea  test2.idea
examples/: learner.dao  numbers.dao  verboseNumbers.dao
src/: Computer.hs  Dao.hs  Grammar.hs  dao-main.hs  test.hs
src/Dao/: .Evaluator.hs.swp  .Files.hs.swp  .Pattern.hs.swp  .Types.hs.swp  .gitignore  Array.hs  Binary.hs  Builtins.hs  Certainty.hs  Check.hs  Class.hs  Combination.hs  Concurrent.hs  Count.hs  Debug.hs  DistVar.hs  Document.hs  EnumSet.hs  Evaluator.hs  Files.hs  Glob.hs  Grammar.hs  HashMap.hs  IOArray.hs  Int.hs  Interpreter.hs  Interval.hs  Lens.hs  Logic.hs  NewParser.hs  Object.hs  OldParser.hs  PPrint.hs  Parser.hs  Pattern.hs  Predicate.hs  Prelude.hs  Procedural.hs  Random.hs  Range.hs  (+18 more)
src/Dao/Debug/: OFF.hi  OFF.hs  ON.hi  ON.hs
src/Dao/Ext/: TheoryOfMind.hs  WordTree.hs
src/Dao/Ext/Parsers/: Bash.hs  C.hs  GNUMake.hs
src/Dao/Grammar/: Debug.hs
src/Dao/Interpreter/: AST.hs  Parser.hs  Tokenizer.hs
src/Dao/Lib/: Array.hs  DataFile.hs  Dict.hs  File.hs  Hash.hs  IntMap.hs  ListEditor.hs  Parser.hs  Process.hs  Program.hs  Set.hs  Thread.hs  WordNet.hs
src/Dao/Object/: AST.hs  Binary.hs  Builtins.hs  Data.hs  DeepSeq.hs  Math.hs  Monad.hs  NewParser.hs  OldParser.hs  PPrint.hs  Parser.hs  Parsers.hs  Pattern.hs  Random.hs  Show.hs  Struct.hs
src/Dao/Text/: Builder.hs  CharSet.hs  Editor.hs  Location.hs  PPrint.hs  Parser.hs  Regex.hs
src/Language/Interpreter/: Dao.hs
src/Language/Interpreter/Dao/: Database.hs  DefaultBIFs.hs  GHCI.hs  Kernel.hs  TestSuite.hs
src/experimental/: Dao.Evaluate.ByteCode.hs
tests/: 1.dao  1.idea  2.dao  2.idea  3.dao  4.dao  5.dao  6.dao  EQN.hs  I.hs  InteractiveGrammarTest.hs  RandObj.hs  TestEnumSet.hs  array.dao  break-continue.dao  catch.dao  collatz1.dao  collatz2.dao  dao-tests.hs  delete.dao  dict.dao  div_by_2_until.dao  file.dao  list.dao  listedit.dao  main.hs  pprint.hs  ref.dao  side-effects.dao  toplevel.dao  try-else.dao  updates.dao
tests/Dao/: CoreTests.hs  SingleTest.hs  Test.hs
tests/Dao/Test/: .gitignore  Grammar.hs  Interval.hs
